@@ -1,4 +1,8 @@
 ------------------------------------------------------------------------
+r106 | trevor | 2009-11-18 15:19:01 -0800 (Wed, 18 Nov 2009) | 1 line
+
+multiversioning transparency methods
+------------------------------------------------------------------------
 r104 | trevor | 2009-07-21 11:01:08 -0700 (Tue, 21 Jul 2009) | 1 line
 
 Updated without a dependancy on a statement handle
